<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="search_prompt">What are you looking for?</string>
    <string name="search_label">Search</string>
    <string name="image_title">Title</string>
    <string name="image_resource_description">Image Resource</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="app_title">Google Image Searcher</string>
    <string name="search_title">Advanced search options</string>
    <string name="settings_image_size_label">Image Size</string>
    <string name="settings_color_label">Color Filter</string>
    <string name="settings_image_type_label">Image Type</string>
    <string name="settings_site_label">Site Filter</string>
    <string name="hint_site_filter">Type a domain</string>
    <string name="save">Save</string>

</resources>
