<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jltolent.gridimageview.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/search_title"
        android:id="@+id/tvAdvSearchTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_image_size_label"
        android:id="@+id/tvSizeLabel"
        android:layout_below="@+id/tvAdvSearchTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spImageSize" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_below="@+id/tvAdvSearchTitle"
        android:layout_toRightOf="@+id/tvSizeLabel"
        android:layout_toEndOf="@+id/tvSizeLabel"
        android:spinnerMode="dropdown"
        android:entries="@array/sizes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_color_label"
        android:id="@+id/tvColorLabel"
        android:layout_below="@+id/tvSizeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spColor" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColor"
        android:layout_below="@+id/spImageSize"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize"
        android:spinnerMode="dropdown"
        android:entries="@array/colors"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_image_type_label"
        android:id="@+id/tvImageTypeLabel"
        android:layout_below="@+id/tvColorLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spImageType" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:layout_below="@+id/spColor"
        android:layout_toRightOf="@+id/tvImageTypeLabel"
        android:layout_toEndOf="@+id/tvImageTypeLabel"
        android:spinnerMode="dropdown"
        android:entries="@array/image_types"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_site_label"
        android:id="@+id/tvSettingsLabel"
        android:layout_below="@+id/tvImageTypeLabel"
        android:layout_alignBottom="@+id/etSite"
        android:layout_alignRight="@+id/tvImageTypeLabel"
        android:layout_alignEnd="@+id/tvImageTypeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:layout_below="@+id/spImageType"
        android:layout_toRightOf="@+id/tvImageTypeLabel"
        android:layout_toEndOf="@+id/tvImageTypeLabel"
        android:hint="@string/hint_site_filter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveSettings"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:onClick="onSaveSettings"/>

</RelativeLayout>
